2001-09-18  Don Porter  <dgp@users.sourceforge.net>

        * unix/configure: Regen.
        * unix/tcl.m4 (SC_CONFIG_CFLAGS): On Linux, disable inlining when
        one of the compat/*.c routines is to be linked in. [Patch 440891]

2001-09-13  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclUtf.c (Tcl_UtfPrev): corrected to return the proper
	location when the middle of a UTF-8 byte was passed in.
	[Bug #450504]

2001-09-13  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* tests/ioCmd.test: Changed the computation of the result for
	  iocmd-8.1[123] so that the tests work for single- and
	  multi-process execution of the testsuite. Depending on the
	  choice of the user stdout is a tty or not and thus reports
	  different channel options. Fixes [460993] reported by Don
	  Porter.

2001-09-12  Don Porter <dgp@users.sourceforge.net>

	Backport several bug fixes from HEAD to core-8-3-1-branch:

        * tests/rename.test:
        * tests/split.test:  Corrected tests to better isolate tests in
        one file from influencing tests in other files.  [Bug 460591]

	* unix/tclLoadShl.c:  Added #include of tclInt.h; access to Tcl
        internals, notably TclpUnloadFile(), is required.  Thanks to
        Bob Techentin for report and patch.  [Bug 459305]

	* generic/tclInitScript.h (initScript):
        * win/tclWinInit.c (TCL_REGISTRY_KEY, TclpSetVariables):  Removed
        vestiges of Tcl's old initialization from registry variables.
        [Bug 455645]

	* tests/unixInit.test (unixInit-3.2): Updated test to support
        newer HP-UX releases that properly report euc-jp as the system
        encoding for Japanese.  Bug report and patch verification by Bob
        Techentin.  [Bug 453883]

	* compat/strtod.c (strtod):  Fixed failure to handle expressions
        like 3eq2 and failure to set errno on overflow.  [Bug 440894]

2001-09-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclEvent.c (TclInExit): Corrected handling of tsd in