@@ -1,3 +1,10 @@
+2001-09-19  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* generic/tcl.h: removed forced #define USE_TCLALLOC 1 for
+	Windows.  This means the native system allocator will be used by
+	default.  This should be binary and source compatible with
+	extensions, as Tcl_Alloc is a properly stubbed function.
+
 2001-09-18  Don Porter  <dgp@users.sourceforge.net>
 
         * unix/configure: Regen.
